1.3.0
- simplify svn log with a short path

1.2.0
- added ArtepoRestore to restore copied artifacts into workspace (eg. for use with other plugins)
- in ArtepoCopy removed ability to define many copy patterns in favor of only one copy pattern
    due to being able to properly restore artifacts in ArtepoRestore

1.1.1
- file repo: fix IllegalArgumentException when number of builds is less then buildsToKeep

1.1.0
- svn repo: clean working copies if not used for more then xxx days
- file repo: for main level artepo only last 3 build's artifacts are kept, the rest is removed
- added ability to configure source promotion name because cleanup process may remove from main artepo
  build artifacts for given build number