@@ -1,5 +1,6 @@
 1.3.0
 - simplify svn log with a short path
+- fix ClassCastException on maven projects (Issue #1)
 
 1.2.0
 - added ArtepoRestore to restore copied artifacts into workspace (eg. for use with other plugins)
